--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buttle",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Serve static files from cwd",
   "main": "index.js",
   "preferGlobal": true,
@@ -27,6 +27,9 @@
     "marked": "~0.3.1",
     "connect": "~2.12.0",
     "commander": "~2.1.0",
-    "chalk": "~0.4.0"
+    "chalk": "~0.4.0",
+    "tiny-lr": "0.0.5",
+    "gaze": "~0.5.0",
+    "connect-livereload": "~0.3.2"
   }
 }
