--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buttle",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Serve static files from cwd",
   "main": "index.js",
   "preferGlobal": true,
@@ -31,6 +31,7 @@
     "tiny-lr": "0.0.5",
     "gaze": "~0.5.0",
     "connect-livereload": "~0.3.2",
-    "less": "~1.6.3"
+    "less": "~1.6.3",
+    "open": "0.0.4"
   }
 }
