--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "gaze": "~0.5.0",
     "connect-livereload": "~0.3.2",
     "less": "~1.6.3",
-    "open": "0.0.4"
+    "open": "0.0.4",
+    "lodash.debounce": "^2.4.1",
+    "lodash.uniq": "^2.4.1"
   }
 }
