--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "connect": "~2.12.0",
     "commander": "~2.1.0",
     "chalk": "~0.4.0",
-    "tiny-lr": "0.0.5",
-    "gaze": "~0.5.0",
-    "connect-livereload": "~0.3.2",
+    "tiny-lr": "0.1.5",
+    "gaze": "~0.5.1",
+    "connect-livereload": "^0.5.3",
     "less": "~1.6.3",
     "open": "0.0.4",
     "lodash.debounce": "^2.4.1",
