--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "url": "https://github.com/jtrussell/buttle/issues"
   },
   "dependencies": {
-    "marked": "~0.3.1",
     "connect": "~2.12.0",
     "commander": "~2.1.0",
     "chalk": "~0.4.0",
@@ -34,6 +33,7 @@
     "less": "~1.6.3",
     "open": "0.0.4",
     "lodash.debounce": "^2.4.1",
-    "lodash.uniq": "^2.4.1"
+    "lodash.uniq": "^2.4.1",
+    "kramed": "^0.5.0"
   }
 }
