--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   "dependencies": {
     "chalk": "~0.4.0",
     "commander": "~2.1.0",
-    "connect": "~2.12.0",
+    "connect": "^3.7.0",
     "connect-livereload": "^0.5.3",
-    "gaze": "~0.5.1",
+    "gaze": "^1.1.3",
     "kramed": "^0.5.0",
-    "less": "~1.6.3",
+    "less": "^3.9.0",
     "lodash.debounce": "^2.4.1",
     "lodash.uniq": "^2.4.1",
     "open": "^6.4.0",
-    "tiny-lr": "0.1.5"
+    "serve-index": "^1.9.1",
+    "serve-static": "^1.14.1",
+    "tiny-lr": "^1.1.1"
   }
 }
